# quickfirenotes

./: .gitignore  README.md  io.github.quickfirenotes.quickfirenotes.yml  meson.build
.github/workflows/: main.yml
data/: quickfirenotes.desktop.in.in  quickfirenotes.gschema.xml.in
po/: POTFILES
src/: Application.vala  MainWindow.vala  meson.build
src/Model/: FormattedText.vala  FormattingTag.vala  Note.vala  NoteEntry.vala  Notebook.vala
src/Services/: FileIOService.vala
